--- a/images/style.css
+++ b/images/style.css
@@ -1,8 +1,15 @@
 h1 {
     text-align: center;
+    font-family: 'Ink Free', 'Times', 'serif';
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: white;
 }
 #canvas-holder {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+body {
+    background-image: url("grassBG.jpg");
 }
